express-t2s-app-v5/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-web-app
  namespace: apps
  labels:
    app: express-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express-web-app
  template:
    metadata:
      labels:
        app: express-web-app
    spec:
      containers:
        - name: express
          image: 730335276920.dkr.ecr.us-east-1.amazonaws.com/t2s-express-app:latest
          ports:
            - name: http
              containerPort: 3000
